--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../../../my installer/bootstrap-3.4.1-dist/css/bootstrap.min.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
     
 </head>
 <body >
     <header class="p-3 bg-dark text-white">
         <div class="row">
             <div class="col">
-               <a class="text-decoration-none text-light" href="./index.html"><h3>Blog</h3></a> 
+               <a class="text-decoration-none text-light" href="/blog"><h3>Blog</h3></a> 
             </div>
             <div class="col">
                 <div class="d-flex justify-content-center gap-3">
@@ -27,7 +27,7 @@
        
         <div class="row">
             <div class="col-lg-8">
-              <h1 class="mb-4">{{posts.title}} {{posts.id}}</h1>
+              <h1 class="mb-4">{{posts.title}} ({{posts.catagory.title}})</h1>
               <p class="text-muted">Posted on January 1, 2024</p>
               <img src="https://via.placeholder.com/800x400" class="img-fluid mb-4" alt="Blog Image">
               <p>{{posts.content}}</p>
@@ -38,9 +38,9 @@
                 <div class="card-body">
                   <h5 class="card-title">Related Posts</h5>
                   <ul class="list-unstyled">
-                    <li><a href="./detail.html">Post 1</a></li>
-                    <li><a href="./detail.html">Post 2</a></li>
-                    <li><a href="./detail.html">Post 3</a></li>
+                    {% for relatedpost in relatedpost %}
+                      <li><a href="{% url 'bloging:detail' slug=relatedpost.slug %}">{{relatedpost.title}}</a></li>
+                    {% endfor %}
                   </ul>
                 </div>
               </div>
@@ -52,6 +52,7 @@
           <span class="text-light">© 2021 Company, Inc</span>
         </div>
     </footer>
-    <script src="../../../../my installer/bootstrap-3.4.1-dist/js/jquery.min.js"></script>
+    <!-- <script src="../../../../my installer/bootstrap-3.4.1-dist/js/jquery.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
