--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../../../my installer/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../../../../my installer/bootstrap-3.4.1-dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body >
     <header class="p-3 bg-dark text-white">
@@ -40,8 +41,8 @@
                                 <h5 class="card-title">{{post.title}}</h5>
                                 <p class="card-text">{{post.content}}</p>
                                 <div class="d-flex justify-content-between">
-                                     <a href="{% url 'bloging:detail' post_id=post.id %}">Read More</a>
-                                    <a class="text-decoration-none text-dark fw-bold" href="#">Sports</a>
+                                     <a href="{% url 'bloging:detail' slug=post.slug %}">Read More</a>
+                                    <a class="text-decoration-none text-dark fw-bold" href="#">{{post.catagory.title}}</a>
                                 </div>
                             </div>
                         </div>
@@ -59,6 +60,7 @@
           <span class="text-light">© 2021 Company, Inc</span>
         </div>
     </footer>
-   <script src="../../../../my installer/bootstrap-3.4.1-dist/js/jquery.min.js"></script>
+   <!-- <script src="../../../../my installer/bootstrap-3.4.1-dist/js/jquery.min.js"></script> -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
