--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -9,27 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body >
-    <header class="p-3 bg-dark text-white">
-        <div class="row">
-            <div class="col">
-                <h3>Blog</h3>
-            </div>
-            <div class="col">
-                <div class="d-flex justify-content-center gap-3">
-                    <a class="text-light text-decoration-none" href="">Home</a>
-                    <a class="text-light text-decoration-none" href="">About</a>
-                    <a class="text-light text-decoration-none" href="">Contact</a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <!-- header part -->
+    {% include 'header.html' %}
+
     <div class="container-fluid ">
-        
+    
         <div class="row">
             <h2 >Latest Posts</h2>
         </div>
-        {% for post in postItem %}
-        <div class="row m-3">
+
+        {% if post_obj %}
+            {% for post in post_obj %}
+            <div class="row m-3">
             <div class="col-4 mb-4">
                 <div class="card">
                     <div class="card-body">
@@ -50,16 +41,44 @@
                 </div>
             </div>
             {% endfor %}
+            <div class="col-12 my-3">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1" aria-label="First">
+                                <span aria-hidden="true">&laquo; first</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1" aria-label="Previous">
+                                <span aria-hidden="true">previous</span>
+                            </a>
+                        </li>
+                        <li class="page-item"><span class="page-link">Page 3 of 20.</span></li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page=4" aria-label="Next">
+                                <span aria-hidden="true">next</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page=20" aria-label="Last">
+                                <span aria-hidden="true">last &raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                
+            </div>
+            {% else %}
+                <p>Post Not Available</p>
+           
         <div class="row">
            
         </div>
-        
+        {% endif %}
+    
     </div>
-    <footer class="bg-dark text-light p-3 fixed-bottom">
-        <div class="col-4 d-flex justify-content-center align-items-center">
-          <span class="text-light">© 2021 Company, Inc</span>
-        </div>
-    </footer>
+    {% include 'footer.html' %}
    <!-- <script src="../../../../my installer/bootstrap-3.4.1-dist/js/jquery.min.js"></script> -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
