--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="../../../../my installer/bootstrap-3.4.1-dist/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="{% static 'blog/index.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body >
@@ -18,12 +19,12 @@
             <h2 >Latest Posts</h2>
         </div>
 
-        {% if post_obj %}
-            {% for post in post_obj %}
+        {% if page_obj %}
+            {% for post in page_obj %}
             <div class="row m-3">
             <div class="col-4 mb-4">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body
                         <div class="row">
                             <div class="col-md-4">
                                 <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
@@ -41,37 +42,44 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="col-12 my-3">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1" aria-label="First">
-                                <span aria-hidden="true">&laquo; first</span>
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page=1" aria-label="Previous">
-                                <span aria-hidden="true">previous</span>
-                            </a>
-                        </li>
-                        <li class="page-item"><span class="page-link">Page 3 of 20.</span></li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page=4" aria-label="Next">
-                                <span aria-hidden="true">next</span>
-                            </a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page=20" aria-label="Last">
-                                <span aria-hidden="true">last &raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                
-            </div>
+
+            {% if page_obj.has_other_pages %}
+                <div class="col-12 my-3">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page=1" aria-label="First">
+                                    <span aria-hidden="true">&laquo; first</span>
+                                </a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{page_obj.previous_page_number}}" aria-label="Previous">
+                                    <span aria-hidden="true">previous</span>
+                                </a>
+                            </li>
+                            {% endif %}
+                            <li class="page-item"><span class="page-link">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}.</span></li>
+                            {% if page_obj.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
+                                    <span aria-hidden="true">next</span>
+                                </a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{page_obj.paginator.num_pages}}" aria-label="Last">
+                                    <span aria-hidden="true">last &raquo;</span>
+                                </a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                    
+                </div>
+            {% endif %}
             {% else %}
                 <p>Post Not Available</p>
-           
+            
         <div class="row">
            
         </div>
