--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -23,7 +23,7 @@
         {% if page_obj %}
             {% for post in page_obj %}
             <div class="row m-3">
-            <div class="col-4 mb-4">
+            <div class="col-4 mb-4 post_container" >
                 <div class="card">
                     <div class="card-body
                         <div class="row">
