--- a/blog/templates/contact.html
+++ b/blog/templates/contact.html
@@ -9,37 +9,38 @@
 
 </head>
 <body >
-    <header class="p-3 bg-dark text-white">
-        <div class="row">
-            <div class="col">
-               <a class="text-decoration-none text-light" href="./index.html"><h3>Blog</h3></a> 
-            </div>
-            <div class="col">
-                <div class="d-flex justify-content-center gap-3">
-                    <a class="text-light text-decoration-none" href="">Home</a>
-                    <a class="text-light text-decoration-none" href="">About</a>
-                    <a class="text-light text-decoration-none" href="">Contact</a>
-                </div>
-            </div>
-        </div>
-    </header>
+   {% include 'header.html' %}
     <div class="container-fluid ">
         <div class="d-flex justify-content-center mt-5">
             <div class="d-flex gap-3 flex-column">
                 <h3>Contact Form</h3>
+               
+                {% for field in forms %}
+                    {% if field.errors %}
+                        <div>
+                            <h1>{{field.label_tag}}</h1>
+                            {% for errors in field.errors %}
+                                <h4>{{errors}}</h4>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                {% if success_msg %}
+                        <h4>{{success_msg}}</h4>
+                {% endif %}
                 <form method="post" class="row g-3">
                     {% csrf_token %}
                     <div class="col-md-6">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
+                        <input type="text" class="form-control" id="name" name="name" value="{{name}}">
                     </div>
                     <div class="col-md-6">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                        <input type="email" class="form-control" id="email" name="email" value="{{email}}">
                     </div>
                     <div class="col-12">
                         <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                        <textarea class="form-control" id="message" name="message" rows="4" value="{{message}}"></textarea>
                     </div>
                     <div class="col-12">
                         <button type="submit" class="btn btn-primary">Submit</button>
