--- a/blog/templates/header.html
+++ b/blog/templates/header.html
@@ -6,8 +6,8 @@
         <div class="col">
             <div class="d-flex justify-content-center gap-3">
                 <a class="text-light text-decoration-none" href="/blog">Home</a>
-                <a class="text-light text-decoration-none" href="">About</a>
-                <a class="text-light text-decoration-none" href="">Contact</a>
+                <a class="text-light text-decoration-none" href="/blog/about">About</a>
+                <a class="text-light text-decoration-none" href="/blog/contact">Contact</a>
             </div>
         </div>
     </div>
